force-app/main/default/objects/blng__UsageSummary__c/fields/Bucket__c.field-meta.xml
<CustomField>
    <fullName>Bucket__c</fullName>
    <formula>ISPICKVAL( blng__OrderProduct__r.UsageType__c , &quot;Bucket&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bucket</label>
    <type>Checkbox</type>
</CustomField>