force-app/main/default/objects/blng__UsageSummary__c/fields/CreditLeftover__c.field-meta.xml
<CustomField>
    <fullName>CreditLeftover__c</fullName>
    <label>Credit Leftover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>