force-app/main/default/objects/blng__UsageSummary__c/fields/QuantityAllowance__c.field-meta.xml
<CustomField>
    <fullName>QuantityAllowance__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quantity (Allowance)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>