force-app/main/default/objects/blng__UsageSummary__c/fields/QuantityAvailable__c.field-meta.xml
<CustomField>
    <fullName>QuantityAvailable__c</fullName>
    <formula>QuantityAllowance__c +  QuantityCarryover__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity (Available)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>