force-app/main/default/objects/blng__UsageSummary__c/fields/QuantityCarryover__c.field-meta.xml
<CustomField>
    <fullName>QuantityCarryover__c</fullName>
    <label>Quantity (Carryover)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>