force-app/main/default/objects/blng__UsageSummary__c/fields/QuantityLeftover__c.field-meta.xml
<CustomField>
    <fullName>QuantityLeftover__c</fullName>
    <formula>QuantityAvailable__c - blng__TotalQuantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity (Leftover)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>