force-app/main/default/objects/blng__UsageSummary__c/fields/TotalPrice__c.field-meta.xml
<CustomField>
    <fullName>TotalPrice__c</fullName>
    <description>Holds the value of Unbilled Subtotal even after it decreases when invoiced.</description>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>